examples/valid/10_nominal_types.lane
module Examples.Valid10

import Basic.Ops.*

import Basic.Io.{Io, Write}

pub struct UserId {
  value : Int
}

pub struct OrderId {
  value : Int
}

pub fn user_value(id : UserId) -> Int {
  id.value
}

pub let user_id : UserId = UserId::{ value: 1 }

pub let order_id : OrderId = OrderId::{ value: 1 }

pub fn answer() -> Unit ! Io {
  if user_value(user_id) == 1 {
    Write::println!("user_id=1")
  } else {
    Write::println!("bad:user_id=1")
  }
}
