examples/invalid/15_method_call_syntax.lane
module Examples.Invalid15
// invalid : Lane2 v1 has field access plus call, but no method receiver lookup
pub struct UserId {
  value : Int
}

pub fn bad(id : UserId) -> Int {
  id.value()
}
